<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pucrs.andepucrs.controller.MainActivity">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/user_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_maps"
        android:orderInCategory="100"
        android:title="@string/title_activity_maps"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/title_activity_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
