<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pucrs.andepucrs.controller.CriticalPointActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/preferencesSpinner"
        android:layout_centerVertical="true"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/latitude"
        android:id="@+id/latitudeTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/longitude"
        android:id="@+id/longitudeTextView"
        android:layout_below="@+id/latitudeTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="65dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selecione_obstaculo"
        android:id="@+id/obstaculoTextView"
        android:layout_above="@+id/preferencesSpinner"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarCriticalPoint"
        android:indeterminate="false"
        android:layout_below="@+id/preferencesSpinner"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/criticalPointButton"
        android:layout_below="@+id/progressBarCriticalPoint"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/errorTextView"
        android:layout_below="@+id/criticalPointButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />


</RelativeLayout>
