<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pucrs.andepucrs.controller.UserConfiguration">


    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/name_textview"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/nameTextView"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nameTextView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameEditText"
        android:text="@string/email_textview"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/nameEditText"
        android:layout_below="@+id/emailTextView"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newpassword_textview"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/oldPasswordEditText"
        android:layout_alignEnd="@+id/oldPwdTextView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/passwordTextView"
        android:layout_toEndOf="@+id/passwordVerifyTextView"
        android:layout_alignStart="@+id/oldPasswordEditText" />

    <TextView
        android:id="@+id/passwordVerifyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordverify_textview"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/passwordVerifyEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/passwordVerifyTextView"
        android:layout_toEndOf="@+id/passwordVerifyTextView"
        android:layout_alignStart="@+id/passwordEditText" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn_button"
        android:layout_below="@+id/passwordVerifyEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarSignin"
        android:indeterminate="false"
        android:layout_alignTop="@+id/passwordTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/errorTextView"
        android:layout_below="@+id/signInButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Senha Antiga"
        android:id="@+id/oldPwdTextView"
        android:layout_below="@+id/emailEditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/oldPasswordEditText"
        android:layout_below="@+id/oldPwdTextView"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
