<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.pucrs.andepucrs.controller.LoginActivity">

        <TextView
            android:id="@+id/LoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="63dp"
            android:text="@string/email_textview"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/passwordLoginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/emailLoginEditText"
            android:layout_marginTop="40dp"
            android:text="@string/password_textview"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/emailLoginEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/passwordLoginEditText"
            android:layout_below="@+id/LoginTextView"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordLoginEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/passwordLoginTextView"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordLoginEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="79dp"
            android:text="@string/login" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarLogin"
            android:layout_below="@+id/passwordLoginEditText"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>